# wait-agent

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs
.agents/: index.yaml
.agents/context/: constraints.yaml  generated-artifacts.yaml  project.yaml  repo-map.yaml
.agents/primitives/: acceptance-check-sync.yaml  agents-self-maintenance.yaml  blocker-record.yaml  local-workspace-validation.yaml  network-registry-scope.yaml  read-current-task.yaml  release-new-version.yaml  task-board-sync.yaml  task-history-update.yaml  (+2 more)
docs/: agents-control-plane.md  architecture.md  event-driven-local-runtime-architecture.md  execution-status-board.md  functional-design.md  interaction-flows.md  local-acceptance-checklist.md  module-design.md  mvp-plan.md  protocol.md  raw-pty-tunnel-design.md  reliable-remote-publication-design.md  remote-geometry-coordination-design.md  remote-host-connect-and-session-creation-design.md  remote-live-mirror-design.md  remote-network-completion-plan.md  remote-node-connection-architecture.md  remote-runtime-owner-architecture.md  remote-session-exit-latency-design.md  remote-session-foundation.md  remote-transport-stability-design.md  server-console-scheduling-design.md  tmux-first-runtime-architecture.md  tmux-first-workspace-plan.md  tmux-native-realignment-review.md  ui-design.md  wait-agent-prd.md
hooks/: pre-commit
scripts/: install-build-deps.sh  install.sh  package-deb.sh  package-dmg.sh  package-rpm.sh
src/: agent.rs  app.rs  bootstrap.rs  cli.rs  client.rs  config.rs  console.rs  error.rs  event.rs  lifecycle.rs  main.rs  pty.rs  renderer.rs  scheduler.rs  server.rs  session.rs  terminal.rs  test_support.rs  transcript.rs  transport.rs
src/ui/: mod.rs  (+4 more)
(+325 files in other folders)
