[package]
name = "waitagent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.43", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
