[package]
name = "waitagent"
version = "0.0.69"
edition = "2021"
description = "Terminal-native interaction scheduler for multi-agent workflows"
homepage = "https://github.com/kikakkz/wait-agent"
repository = "https://github.com/kikakkz/wait-agent"
license = "MIT"
keywords = ["tmux", "terminal", "multiplexer", "workspace", "agent"]
categories = ["command-line-utilities"]

[package.metadata.deb]
maintainer = "kikakkz <kikakkz@users.noreply.github.com>"
depends = "libevent-2.1-7 | libevent-2.1-6, libncurses6 | libncurses5"
section = "utils"
priority = "optional"

[package.metadata.generate-rpm]
vendor = "WaitAgent"
summary = "Terminal-native interaction scheduler for multi-agent workflows"
requires = "libevent, ncurses-libs"

[dependencies]
base64 = "0.22"
libc = "0.2"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.43", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.12", features = ["transport"] }

[build-dependencies]
protoc-bin-vendored = "3"
tonic-build = "0.12"
